Refactored a bit
Former-commit-id: f358d3d95a360da9d6de1ea6f0e3649593e024d0